log
Wed 08 May 2024 03:03:16 PM UTC: 
 tests:  1|8
total_score: 0/70
ae3a35e
Wed 08 May 2024 03:13:28 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
 tests:  3|7
total_score: 5/70
03a685a
Wed 08 May 2024 03:16:02 PM UTC: 
 treemap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0316c54
